--- a/src/theme/light.scss
+++ b/src/theme/light.scss
@@ -1,4 +1,10 @@
 ion-content{
     //app全局样式定义
     background-color: #e5e6e8 !important;
+  .marginBottom{
+    margin-bottom: 10px!important;
+  }
+  .paddingTop{
+    padding-top: 10px !important;
+  }
 }
